fix z-index

--- a/css/styles.css
+++ b/css/styles.css
@@ -207,6 +207,7 @@ select:-webkit-autofill:focus {
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.75);
+  z-index: 90;
 }
 .sitenav-bg--open{
   display: block;
@@ -931,7 +932,7 @@ select:-webkit-autofill:focus {
     top: 105px;
     left: 0;
     right: 0;
-    z-index: 100;
+    z-index: 80;
   }
   .shopping-cart--modal{
     max-width: 450px;
